# big-iron

./: .gitignore  Cargo.toml  LICENSE  Taskfile.yaml  x86_64-metal.json
.cargo/: config.toml
docs/: links.md  project.md  research.md  resources.md  rust-impl.md  timeline.md
docs/language/: languages.md  memory-impl.md  memory-management.md
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
